src/components/templates/EtsySimpleEditHero/EtsySimpleEditHero.css
.etsy-hero{
    height:760px;
    width:100%;
    overflow: hidden;
    background:black;
    display: flex;
    justify-content: center;
    align-items: center;
}

form-container{
    display: flex;
    justify-content: center;
    align-items: center;
    width:1082px;
    height:790px;
    margin-bottom: 8%;
    flex-direction: row;

}
form-container left-items {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    height:100%;
}
form-container left-items top-items {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    height:75px;
    width:100%;
    flex-direction: column;
    margin-bottom: 15px;
}



form-container left-items top-items h1 {
    text-align: left;
    width:100%;
    font-size: 43.5862px;
    line-height: 52px;
    /* identical to box height */
    
 
    
    background: linear-gradient(251.44deg, #CBC8C8 37.43%, #E2D6D6 44.39%, #F1F1F1 67.13%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
    text-fill-color: transparent;
}



form-container left-items top-items h2 {
    margin-top:8px;
    font-size: 20px;
    color:white;
    text-align: left;
    width:100%;
    

}

form-container left-items top-items h2 span {
   
    color:#FF6B00;
    font-family: 'Times New Roman', Times, serif;

    

}




form-container left-items center-card{

    width: 486px;
    height: 590px;

    display: flex;
    align-items: center;
    justify-content: center;


    border: 2px solid #534859;
    border: 2px solid rgba(168, 26, 255, .15);
    border-radius: 12px;
    border: 2px solid #534859
}

form-container right-items {
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
    height:100%;
    flex-direction: column;
}


form-container right-items top-items {
    display: flex;
    justify-content: center;
    align-items: center;
    gap:15px;
    height:65px;

}


form-container right-items center-card{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 486px;
    height: 590px;
    flex-direction: column;
  
    background: linear-gradient(180deg, #111111 0%, rgba(0, 0, 0, 0) 100%);
    border-radius: 12px;
    box-shadow: 0px 15.020509719848633px 35.04785919189453px 15.020509719848633px #2E0647;
    background: linear-gradient(180deg, rgba(168, 26, 255, 0) 65.62%, rgba(168, 26, 255, 0.2146) 100%);
    border: 2px solid rgba(168, 26, 255, .15);

    border: 2px solid #534859
}


form-container right-items center-card center-card-content{
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: column;
    width:100%;
    height:80%;

}


form-container right-items center-card center-card-content fields-container{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;

    width:100%;
    height:100%;

}
colors-container{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;   
    gap:15px;
}
input {
    width: 150px;
    height: 32px;
    padding: 0 10px;
    border: 0px solid #ccc;
    border-radius: 5px;
    font-family: inherit;
    font-size: inherit;
    font-weight: inherit;
    box-sizing: border-box;
    overflow:hidden;
    background: transparent;
    color:white;
}

.clr-open-label{
    width:100%;
}

.color-field{
background:transparent;
border-radius: 5px;
overflow: hidden;
display: flex;
justify-content: center;
z-index: 2;


}
.full .clr-field {
    display: inline-block;
    position: relative;
    color: transparent;
    overflow: hidden;
    border-radius: 5px;
    /* box-shadow: 0px 15.020509719848633px 35.04785919189453px 15.020509719848633px #2E0647; */
    border:0px solid grey;
    
}




.full .clr-field button {
    width: 200px;
    height: 95px;
    /* left: 5px; */
    right: auto;
    border-radius: 5px;
    padding: 5px;
    border:0px solid grey;
}
@keyframes fadeOut {
    0% { 
        transform: scaleX(.5);
  
    }
    50% {


      transform: scaleX(1.02);
    }
    100%{


   
      transform: scaleX(1);
    }
  }

.main-color-container{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap:15px;
    display:flex;
    position: absolute;
    opacity:1;
    transition: all .4s ease;
    animation-name: fadeOut;
    animation: fadeOut .4s ease-in-out;
    transition: all .4s ease;
    transition-delay: 20ms;
    z-index: 1;
 
    
}

.main-color-container-deactivated{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap:15px;
    display:none;
    opacity:0;
    position: absolute;
    animation-name: fadeOut1;
    animation: fadeOut1 .4s ease-in-out;
    transition: all .4s ease;
    transition-delay: 20ms;
   
    z-index: 1;

}


.main-text-container{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap:15px;
    display:flex;
    position: absolute;
    width:520px;

    animation-name: fadeOut;
    animation: fadeOut .4s ease-in-out;

}

@keyframes fadeOut1 {
    0% { opacity: 1;
        transform: scale(.5);
        display:none;
  
    }
    50% {
      opacity: 1;
      z-index: 1;
      display:none;
      transform: scale(1.02);
    }
    100%{
      opacity: 0;
      display:none;
      position: fixed;
      z-index: -500;
      transform: scale(1);
    }
  }

.main-text-container-deactivated{
    opacity:0;
   display:none;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap:15px;

 
    position: absolute;
    width:520px;
    animation-name: fadeOut1;
    animation: fadeOut1 .4s ease-in-out;



}

result-button-row{
    display:flex;
    align-items: center;
    justify-content: center;
    width:100%;
    gap: 15px;
}


@media screen and (max-width: 480px) {
    form-container{
        flex-direction: column;
        width:95%;
    ;}
    form-container left-items {

        width: 100%;
  
    

    }
    form-container left-items center-card{

        width: 95%;
        height: 590px;


    }


    form-container right-items {

        width: 100%;
        justify-content: center;
        align-items: center;
  
    

    }
    form-container right-items center-card{

        width: 95%;
        height: 590px;
    

    }
}

